[package]
name = "contentful"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.126", features = ["derive"]}
serde_json = "1.0.64"
serde_yaml = "0.8.17"
chrono = {version = "0.4.19", features =[ "serde"]}
